Test/git-issues/git-issue-668.dfy.expect
git-issue-668.dfy(15,13): Error: receiver type (object) does not have a member named F
git-issue-668.dfy(22,13): Error: receiver type (object) does not have a member named J
git-issue-668.dfy(28,13): Error: Member selection requires a subtype of X? (got something more like object)
git-issue-668.dfy(28,13): Error: receiver type (object) does not have a member named F
4 resolution/type errors detected in git-issue-668.dfy
